--- a/crud_empresaficticia.client/src/App.css
+++ b/crud_empresaficticia.client/src/App.css
@@ -63,6 +63,14 @@ input[type="number"] {
     border-radius: 5px;
 }
 
+input[type="email"] {
+    padding: 8px;
+    margin: 5px;
+    width: 200px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
 select {
     padding: 8px;
     margin: 5px;
@@ -111,6 +119,10 @@ select {
     }
 
     input[type="number"] {
+        width: 90%;
+    }
+
+    input[type="email"] {
         width: 90%;
     }
 
